@@ -1,5 +1,6 @@
 v0.7 --
 
+	* Don't reclaim unused MACEISA_PAR_MERR_IRQ interrupt anymore.
 	* Cosmetic changes.
 	* Acknowledge changes in main kernel tree (IRQ: Maintain regs pointer
 	  globally).
